--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
+
         <activity android:name=".MainActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
@@ -23,6 +24,10 @@
 
 
         </activity>
+
+        <activity android:name=".SpielfeldActivity"
+                  android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
