Design überarbeitet, RegelActivity, NicknameDialog

--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.user.zzzmitview">
+          package="com.example.user.zzzmitview">
 
     <application
         android:allowBackup="true"
@@ -10,18 +10,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
 
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
         </activity>
 
-        <activity android:name=".SpielfeldActivity"
-                  android:screenOrientation="portrait" />
+        <activity
+            android:name=".SpielfeldActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".RegelActivity"
+            android:screenOrientation="portrait"/>
 
     </application>
 
