--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
@@ -22,11 +22,11 @@
         </activity>
 
         <activity
-            android:name=".SpielfeldActivity"
+            android:name=".activity.SpielfeldActivity"
             android:screenOrientation="portrait"/>
 
         <activity
-            android:name=".RegelActivity"
+            android:name=".activity.RegelActivity"
             android:screenOrientation="portrait"/>
 
     </application>
